Three.js Manual - 1 Fundamentals - start😚

--- a/threeJS/Manual/index.html
+++ b/threeJS/Manual/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
-	</head>
-	<body>
-		<script type="module" src="./main.js"></script>
-    <div >
-    </div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>1 Basic - 1.1 Fundamentals (Three.JS Manual)</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+		<script type="module" src="./1-Manual/1-Fundamentals.js"></script>
+		<canvas id="canvas-1-1"></canvas>
+  </body>
 </html>
