--- a/threeJS/Manual/index.html
+++ b/threeJS/Manual/index.html
@@ -10,7 +10,15 @@
     </style>
   </head>
   <body>
-		<script type="module" src="./1-Manual/1-Fundamentals.js"></script>
-		<canvas id="canvas-1-1"></canvas>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "./build/three.module.js"
+        }
+      }
+    </script>
+    <script type="module" src="./1-Basics/1-Fundamentals.js"></script>
+
+    <canvas id="canvas-1-1"></canvas>
   </body>
 </html>
