Three.js Manual - 2 Fundamentals - 2.2 Scenegraph  - start😚

--- a/threeJS/Manual/index.html
+++ b/threeJS/Manual/index.html
@@ -17,8 +17,10 @@
         }
       }
     </script>
-    <script type="module" src="./1-Basics/1-Fundamentals.js"></script>
+    <!-- <script type="module" src="./1-Basics/1.1-Fundamentals.js"></script>
+    <canvas id="canvas-1-1"></canvas> -->
 
-    <canvas id="canvas-1-1"></canvas>
+    <script type="module" src="./2-Fundamentals//2.2-Scenegraph.js"></script>
+    <canvas id="canvas-2-2" style="width: 100vw; height: 100vh"></canvas>
   </body>
 </html>
