--- a/threeJS/Manual/index.html
+++ b/threeJS/Manual/index.html
@@ -13,7 +13,8 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "./build/three.module.js"
+          "three": "./build/three.module.js",
+          "GUI": "https://cdn.jsdelivr.net/npm/lil-gui@0.20/+esm"
         }
       }
     </script>
