--- a/threeJS/Manual/index.html
+++ b/threeJS/Manual/index.html
@@ -21,7 +21,10 @@
     <!-- <script type="module" src="./1-Basics/1.1-Fundamentals.js"></script>
     <canvas id="canvas-1-1"></canvas> -->
 
-    <script type="module" src="./2-Fundamentals//2.2-Scenegraph.js"></script>
-    <canvas id="canvas-2-2" style="width: 100vw; height: 100vh"></canvas>
+    <!-- <script type="module" src="./2-Fundamentals//2.2-Scenegraph.js"></script>
+    <canvas id="canvas-2-2" style="width: 100vw; height: 100vh"></canvas> -->
+
+    <script type="module" src="./0-Practice//1-lineAnimation.js"></script>
+    <canvas id="canvas-0-1" style="width: 100vw; height: 100vh"></canvas>
   </body>
 </html>
